--- a/app/package.json
+++ b/app/package.json
@@ -2,13 +2,13 @@
   "name": "FriendFinder",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "watch": "nodemon server.js"
   },
-  "keywords": [],
+
   "author": "",
   "license": "ISC",
   "dependencies": {
